--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
       <artifactId>resteasy-jackson2-provider</artifactId>  
       <version>6.2.0.Final</version> 
     </dependency> 
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>4.2.3</version>
+    </dependency>
   </dependencies>  
   <build> 
     <sourceDirectory>src</sourceDirectory>  
