--- a/pom.xml
+++ b/pom.xml
@@ -95,11 +95,16 @@
       <groupId>org.jboss.resteasy</groupId>  
       <artifactId>resteasy-jackson2-provider</artifactId>  
       <version>6.2.0.Final</version> 
+    </dependency>  
+    <dependency> 
+      <groupId>redis.clients</groupId>  
+      <artifactId>jedis</artifactId>  
+      <version>4.2.3</version> 
     </dependency> 
     <dependency>
-      <groupId>redis.clients</groupId>
-      <artifactId>jedis</artifactId>
-      <version>4.2.3</version>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>2.13.4</version>
     </dependency>
   </dependencies>  
   <build> 
@@ -143,7 +148,7 @@
               </resource> 
             </resources> 
           </deployment>  
-          <resourceGroup>scc-backend-rg-58152</resourceGroup>  
+          <resourceGroup>scc23-rg-westeurope-58152</resourceGroup>  
           <appName>scc-backend-58152</appName> 
         </configuration> 
       </plugin> 
