--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
 			<artifactId>azure-cosmos</artifactId>
 			<version>4.37.0</version>
 		</dependency>
+    <dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>3.0.8</version>
+		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
