--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
 			<artifactId>jersey-client</artifactId>
 			<version>3.0.8</version>
 		</dependency>
+    <dependency>
+    <groupId>org.glassfish.jersey.inject</groupId>
+    <artifactId>jersey-hk2</artifactId>
+    <version>2.28</version>
+</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
